# esp32-edge-detection

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md  server.py  server_tcp.py  server_test.py
components/ai_model/: CMakeLists.txt  model_data.h  model_data_test.cc
components/ai_model/include/: model_data.h  model_data_test.h
components/camera_lib/: cam_hal.c  esp_camera.c
components/camera_lib/include/: cam_hal.h  esp_camera.h  sccb.h  sensor.h  xclk.h
main/: .gitmodules  CMakeLists.txt  Kconfig  Kconfig.projbuild  ai_manager.c  ai_manager.cc  ai_manager.h  camera_manager.c  camera_manager.h  http_client_manager.h  http_post_manager.c  http_post_manager.h  main.c  task_prio.h  timer_test.c  timer_test.h  websocket_manager.c  websocket_manager.h  wifi_manager.c  wifi_manager.h
